--- a/todo.txt
+++ b/todo.txt
@@ -1,13 +1,13 @@
-TO DO LIST
+TO DO LIST (git pull)
 
-1. Github login
+1. 원격 Repo 변경
 
-2. Create new repository
+2. Local Repo 이력 변경
 
-3. Remote repo URL 복사
+3. git push origin master
 
-4. Local Repo에서 원격 repo 에 연결
+4. 오류 확인
 
-5. git push origin master
+5. git pull origin master
 
-6. 원격 repo 확인
+6. git push origin master
